--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mouse Event</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -16,5 +17,6 @@
             <h4>Mouse Y Prosition(px)</h4>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
